[tool.poetry]
name = "py-aiger-bdd"
readme="README.md"
version = "0.2.6"
repository = "https://github.com/mvcisback/py-aiger-bdd"
description = "Aiger to BDD bridge."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_bdd" },
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3"
bidict = "^0.18.0"
funcy = "^1.12"
py-aiger = "^3.5.0"
dd = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.29"
codecov = "^2.0"
hypothesis = "^4.42"
hypothesis_cfg = {git = "git://github.com/mvcisback/hypothesis-cfg.git"}
py-aiger-bv = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
